bynkc/tests/fixtures/positive/337_map_values/input.bynk
commons demo.mapvalues

fn totals(m: Map[String, Int]) -> List[Int] {
  m.values()
}

fn names(m: Map[String, Int]) -> List[String] {
  m.keys()
}
