bynkc/tests/fixtures/negative/330_traverse_all_non_result/input.bynk
commons demo.tanonres

fn plain(x: Int) -> Effect[Int] {
  Effect.pure(x)
}

fn bad(xs: List[Int]) -> Effect[List[Result[Int, String]]] {
  xs.traverseAll((x: Int) => plain(x))
}
